修改Base64依赖